<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fullname_GCMRegistration"
        android:paddingTop="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:id="@+id/textViewFullName"
        android:layout_marginTop="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

    <EditText
        android:id="@+id/EditTextFullName"
        android:layout_width="wrap_content"
        android:paddingTop="12dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:hint="@string/enterName"
        android:layout_below="@+id/textViewFullName"
        android:layout_alignLeft="@+id/textViewFullName"
        android:layout_alignStart="@+id/textViewFullName" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailID_GCMRegistration"
        android:paddingTop="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:id="@+id/textViewEmail"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/EditTextFullName"
        android:layout_alignLeft="@+id/EditTextFullName"
        android:layout_alignStart="@+id/EditTextFullName" />

    <EditText
        android:id="@+id/EditTextEmailID"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/enterEmailID"
        android:layout_below="@+id/textViewEmail"
        android:layout_alignLeft="@+id/textViewEmail"
        android:layout_alignStart="@+id/textViewEmail" />

    <Button
        android:id="@+id/ButtonGCMRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="SubmitRegistrationDetails"
        android:layout_marginBottom="57dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/checkBoxNotification"
        android:layout_toStartOf="@+id/checkBoxNotification" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Notifications"
        android:id="@+id/checkBoxNotification"
        android:layout_gravity="right"
        android:checked="true"
        android:layout_above="@+id/ButtonGCMRegister"
        android:layout_alignRight="@+id/textViewFullName"
        android:layout_alignEnd="@+id/textViewFullName"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp" />

</RelativeLayout>